Added Favicon and minor fixes

--- a/blog.html
+++ b/blog.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=460">
   <title>Blog | Aadish Jain</title>
+  <link rel="icon" type="image/png" href="assets/favicon.webp">
   <link rel="stylesheet" href="style/style.css">
   <link rel="stylesheet" href="style/blog.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
