--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=460">
 
     <title>Aadish Jain | iOS Developer </title>
+    <link rel="icon" type="image/png" href="assets/favicon.webp">
 
     <meta name="description"
         content="The personal portfolio of Aadish Jain, a creative iOS developer from Indore, India, specializing in building engaging mobile user experiences with Swift and SwiftUI.">
