--- a/reviews.html
+++ b/reviews.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=460">
     <title>Leave a Review | Aadish Jain</title>
+    <link rel="icon" type="image/png" href="assets/favicon.webp">
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/reviews.css">
     <script src="https://unpkg.com/@studio-freight/lenis@1.0.42/dist/lenis.min.js"></script>
