--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
 
     <meta name="keywords" content="Aadish Jain, iOS Developer, Swift, SwiftUI, Mobile App Developer, Portfolio, Indore">
     <script src="https://unpkg.com/@studio-freight/lenis@1.0.42/dist/lenis.min.js"></script>
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EV56GP9RHL"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-EV56GP9RHL');
+</script>
+    
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
