--- a/projects.html
+++ b/projects.html
@@ -10,6 +10,16 @@
     <link rel="stylesheet" href="style/projects.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <script src="https://unpkg.com/@studio-freight/lenis@1.0.42/dist/lenis.min.js"></script>
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EV56GP9RHL"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-EV56GP9RHL');
+</script>
+    
 </head>
 
 <body>
